# triton-kernels

./: .gitignore  makefile  pyproject.toml
.devcontainer/: devcontainer.json
examples/: mat_mat_prod.ipynb
notebooks/: fused_linear_softmax.ipynb  fused_softmax.ipynb  gelu.ipynb  linear.ipynb  softmax.ipynb
notebooks/old/: fused_gated_mlp.ipynb  fused_linear_activation.ipynb  fused_softmax.ipynb  gelu_old.ipynb  mat_vec_prod.ipynb  silu.ipynb  t5gemma.ipynb  vec_vec_prod.ipynb  vector_add.ipynb
src/triton_kernels/: __init__.py  benchmark.py  profiling.py  utils.py
src/triton_kernels/functional/: linear_softmax.py  matmul.py
src/triton_kernels/kernels/: __init__.py  gelu.py  softmax.py
src/triton_kernels/nn/: __init__.py  gated_mlp.py  gelu.py  linear.py  softmax.py
tests/: gelu.py  softmax.py  test_gelu.py  test_linear.py  test_matmul.py  test_softmax.py
